--- a/src/modules/site/componenets/product.details.component.html
+++ b/src/modules/site/componenets/product.details.component.html
@@ -11,7 +11,7 @@
                                 <div class="thumb-slider">
                                     <ul class="slides">
                                         <li *ngFor="let image of images" [attr.data-thumb]="image">
-                                            <img [src]="image" onerror="this.src='assests/images/empty.png';" alt="">
+                                            <img [src]="image" onerror="this.src='assets/images/empty.png';" alt="">
                                         </li>
                                     </ul>
                                 </div>
