--- a/src/modules/site/componenets/result.list.component.html
+++ b/src/modules/site/componenets/result.list.component.html
@@ -4,7 +4,7 @@
         <!-- Product img -->
         <div class="media-left">
             <div class="item-img">
-                <img class="img-responsive" [src]="product.image" onerror="this.src='assests/images/empty.png';" alt=""> </div>
+                <img class="img-responsive" [src]="product.image" onerror="this.src='assets/images/empty.png';" alt=""> </div>
         </div>
         <!-- Content -->
         <div class="media-body">
