--- a/src/components/site.template.component.html
+++ b/src/components/site.template.component.html
@@ -1,15 +1,15 @@
-<link rel="stylesheet" type="text/css" href="/assests/css/settings.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="/assets/css/settings.css" media="screen" />
 
 <!-- StyleSheets -->
-<link rel="stylesheet" href="/assests/css/ionicons.min.css">
-<link rel="stylesheet" href="/assests/css/font-awesome.min.css">
-<link rel="stylesheet" href="/assests/css/site-main.css">
-<link rel="stylesheet" href="/assests/css/style.css">
-<link rel="stylesheet" href="/assests/css/responsive.css">
+<link rel="stylesheet" href="/assets/css/ionicons.min.css">
+<link rel="stylesheet" href="/assets/css/font-awesome.min.css">
+<link rel="stylesheet" href="/assets/css/site-main.css">
+<link rel="stylesheet" href="/assets/css/style.css">
+<link rel="stylesheet" href="/assets/css/responsive.css">
 
 <div style="height: 100%;" *ngIf="!loaded">
     <div class="loading">
-        <img src="assests/images/loading_spinner.gif" />
+        <img src="assets/images/loading_spinner.gif" />
     </div>
 </div>
 <!-- Page Wrapper -->
