--- a/src/modules/invoice/components/list.component.html
+++ b/src/modules/invoice/components/list.component.html
@@ -3,7 +3,7 @@
         <loading></loading>
         <div class="margin-bottom-xs col-md-12">
             <div class="col-md-6 no-padding">
-                <button *ngIf="module.add" mat-raised-button color="success" [routerLink]="['/admin/invoice/create/0']">
+                <button *ngIf="module && module.add" mat-raised-button color="success" [routerLink]="['/admin/invoice/create/0']">
                     <mat-icon class="md-16">add_box</mat-icon> Nuevo</button>
                 <mat-radio-group class="pull-right" [(ngModel)]="payment_method" (change)="search()" style="margin-top: 15px;" >
                     <mat-radio-button value='["Contado"]' style="padding-right: 15px;">Contado</mat-radio-button>
