--- a/src/modules/acknowledgment/components/create.component.html
+++ b/src/modules/acknowledgment/components/create.component.html
@@ -1,5 +1,5 @@
 <form #acknowledgmentForm="ngForm" novalidate (ngSubmit)="save()">
-    <mat-card class="col-md-12">
+    <mat-card class="col-md-12" *ngIf="module">
         <loading></loading>
         <mat-card-content *ngIf="acknowledgment">
             <div class="col-md-12 no-padding">
@@ -67,7 +67,7 @@
                                 <th>ITBis</th>
                                 <th>Total</th>
                                 <th *ngIf="module.edit || module.delete">
-                                    <button [disabled]="!acknowledgment.office" type="button" *ngIf="module.add" mat-raised-button color="success" (click)="edit()">
+                                    <button [disabled]="!acknowledgment.office" type="button" *ngIf="module && module.add" mat-raised-button color="success" (click)="edit()">
                                         <mat-icon class="md-16">add_box</mat-icon> Producto
                                     </button>
                                 </th>
