--- a/src/modules/activity/components/list.component.html
+++ b/src/modules/activity/components/list.component.html
@@ -1,9 +1,9 @@
 ﻿<mat-card class="col-md-12">
     <loading></loading>
-    <mat-card-content>
+    <mat-card-content *ngIf="module">
         <div class="col-md-12">
             <div class="col-md-6 no-padding">
-                <button *ngIf="module.add" mat-raised-button color="success" [routerLink]="['/admin/activity/create/0']">
+                <button *ngIf="module && module.add" mat-raised-button color="success" [routerLink]="['/admin/activity/create/0']">
                     <mat-icon class="md-16">add_box</mat-icon> Nuevo</button>
             </div>
             <div class="col-md-6 no-padding">
