--- a/src/modules/box/components/list.component.html
+++ b/src/modules/box/components/list.component.html
@@ -3,7 +3,7 @@
         <loading></loading>
         <div class="col-md-12">
             <div class="col-md-6 no-padding">
-                <button *ngIf="module.add" mat-raised-button color="success" [routerLink]="['/admin/box/create/0']">
+                <button *ngIf="module && module.add" mat-raised-button color="success" [routerLink]="['/admin/box/create/0']">
                     <mat-icon class="md-16">add_box</mat-icon> Nuevo</button>
             </div>
             <div class="col-md-6 no-padding">
