--- a/src/modules/service/components/create.component.html
+++ b/src/modules/service/components/create.component.html
@@ -90,7 +90,7 @@
             </div>
             <div class="col-md-12 no-padding">
                 <div class="col-md-12 text-right margin-bottom-xs">
-                    <button type="button" *ngIf="module.add" mat-raised-button color="success" (click)="edit()">
+                    <button type="button" *ngIf="module && module.add" mat-raised-button color="success" (click)="edit()">
                         <mat-icon class="md-16">add_box</mat-icon> Agregar Producto
                     </button>
                 </div>
